--- a/lang/id.json
+++ b/lang/id.json
@@ -1,5 +1,9 @@
 {
     "Log in": "Masuk",
     "Forgot your password?": "Lupa password kamu?",
-    "Remember me": "Ingatkan sesi login"
+    "Remember me": "Ingatkan sesi login",
+    "Already registered?": "Sudah pernah daftar?",
+    "Register": "Daftar",
+    "Confirm Password": "Konfirmasi Password",
+    "Name": "Nama"
 }
