update : add error page & change auth page

--- a/lang/id.json
+++ b/lang/id.json
@@ -5,5 +5,7 @@
     "Already registered?": "Sudah pernah daftar?",
     "Register": "Daftar",
     "Confirm Password": "Konfirmasi Password",
-    "Name": "Nama"
+    "Name": "Nama",
+    "Not Found": "Tidak Ditemukan",
+    "Page Not Found": "Halaman Tidak Dapat Ditemukan"
 }
