update : menambahkan halaman register dan menambahkan beberapa arti lang

--- a/lang/id.json
+++ b/lang/id.json
@@ -11,8 +11,15 @@
     "Page Not Found": "Halaman Tidak Dapat Ditemukan",
     "Login to your account": "Login ke akun kamu",
     "I forgot password": "Lupa password",
-    "Login with Google": "Login dengan google",
+    "Login with Google": "Masuk dengan google",
     "Don't have account yet?": "Belum punya akun?",
     "Sign up": "Daftar",
-    "Or": "Atau"
+    "Or": "Atau",
+    "Already have account?": "Sudah punya akun?",
+    "Register with Google": "Daftar dengan Google",
+    "Create new account": "Buat akun baru",
+    "Agree the": "Setuju dengan",
+    "terms and policy": "syarat dan kebijakan",
+    "Enter name": "Masukan nama",
+    "Enter email": "Masukan email"
 }
