update : menambahkan table data_user dan membuat halaman laporan

--- a/lang/id.json
+++ b/lang/id.json
@@ -21,5 +21,7 @@
     "Agree the": "Setuju dengan",
     "terms and policy": "syarat dan kebijakan",
     "Enter name": "Masukan nama",
-    "Enter email": "Masukan email"
+    "Enter email": "Masukan email",
+    "Make a report": "Buat Laporan",
+    "Log out": "Keluar"
 }
