update : halaman create laporan

--- a/lang/id.json
+++ b/lang/id.json
@@ -23,5 +23,6 @@
     "Enter name": "Masukan nama",
     "Enter email": "Masukan email",
     "Make a report": "Buat Laporan",
-    "Log out": "Keluar"
+    "Log out": "Keluar",
+    "REPORT AS A SOCIETY": "LAPOR SEBAGAI MASYARAKAT"
 }
