update : preview image

--- a/lang/en.json
+++ b/lang/en.json
@@ -5,5 +5,7 @@
     "Laporan akan diterima oleh petugas": "Reports will be received by officers",
     "Foto Bukti": "Photo Proof",
     "Untuk memperkuat laporan anda, kami membutuhkan bukti berupada foto atau video": "To strengthen your report, we need evidence in the form of photos or videos",
-    "Kirim": "Submit"
+    "Kirim": "Submit",
+    "Detail Alamat": "Address",
+    "Kami membutuhkan alamat untuk memperbaiki layanan kami": "We need addresses to improve our service"
 }
