update : new preview and fix etc

--- a/lang/en.json
+++ b/lang/en.json
@@ -4,7 +4,7 @@
     "Isi Laporan": "Contents of the report",
     "Laporan akan diterima oleh petugas": "Reports will be received by officers",
     "Foto Bukti": "Photo Proof",
-    "Untuk memperkuat laporan anda, kami membutuhkan bukti berupada foto atau video": "To strengthen your report, we need evidence in the form of photos or videos",
+    "Untuk memperkuat laporan anda, kami membutuhkan bukti berupada foto": "To strengthen your report, we need evidence in the form of photos",
     "Kirim": "Submit",
     "Detail Alamat": "Address",
     "Kami membutuhkan alamat untuk memperbaiki layanan kami": "We need addresses to improve our service"
