update : add no telp & nik for register society

--- a/lang/en.json
+++ b/lang/en.json
@@ -7,5 +7,7 @@
     "Untuk memperkuat laporan anda, kami membutuhkan bukti berupada foto": "To strengthen your report, we need evidence in the form of photos",
     "Kirim": "Submit",
     "Detail Alamat": "Address",
-    "Kami membutuhkan alamat untuk memperbaiki layanan kami": "We need addresses to improve our service"
+    "Kami membutuhkan alamat untuk memperbaiki layanan kami": "We need addresses to improve our service",
+    "No. Telp": "Phone Number",
+    "NIK": "ID Number"
 }
