--- a/lang/id.json
+++ b/lang/id.json
@@ -33,5 +33,12 @@
     "Ensure your account is using a long, random password to stay secure.": "Pastikan akun Anda menggunakan kata sandi acak yang panjang agar tetap aman.",
     "Profile Information": "Informasi Profile",
     "Update your account's profile information and email address.": "Perbarui informasi profil akun dan alamat email Anda.",
-    "Log Out": "Keluar"
+    "Log Out": "Keluar",
+    "Home": "Beranda",
+    "My Report": "Laporan Saya",
+    "Create Report": "Buat Laporan",
+    "We are sorry but the page you are looking for was not found" : "Mohon maaf, halaman yang Anda cari tidak ditemukan",
+    "Too Many Requests": "Terlalu Banyak Request",
+    "Server Error": "Kesalahan Teknis",
+    "Sorry, you need to login": "Maaf, kamu perlu login"
 }
