update : add dynamic laporan

--- a/lang/id.json
+++ b/lang/id.json
@@ -40,5 +40,6 @@
     "We are sorry but the page you are looking for was not found" : "Mohon maaf, halaman yang Anda cari tidak ditemukan",
     "Too Many Requests": "Terlalu Banyak Request",
     "Server Error": "Kesalahan Teknis",
-    "Sorry, you need to login": "Maaf, kamu perlu login"
+    "Sorry, you need to login": "Maaf, kamu perlu login",
+    "Images": "Foto"
 }
