--- a/lang/en.json
+++ b/lang/en.json
@@ -13,5 +13,8 @@
     "LAPORAN SAYA": "MY REPORT",
     "Kami mohon maaf atas ketidaknyamanan ini. Kami akan segera memperbaiki": "We apologize for this inconvenience. We will fix soon",
     "Kami mohon maaf atas ketidaknyamanan ini. Kami akan segera memperbarui layanan ini": "We apologize for this inconvenience. We will update this service soon",
-    "Mohon maaf, terlalu banyak permintaan. Silahkan coba lagi nanti": "Sorry, too many requests. Please try again later"
+    "Mohon maaf, terlalu banyak permintaan. Silahkan coba lagi nanti": "Sorry, too many requests. Please try again later",
+    "Dibuat": "Created at",
+    "Isi laporan": "Contents of report",
+    "Lokasi": "Location"
 }
