update : laporan sebagai admin

--- a/lang/en.json
+++ b/lang/en.json
@@ -16,5 +16,7 @@
     "Mohon maaf, terlalu banyak permintaan. Silahkan coba lagi nanti": "Sorry, too many requests. Please try again later",
     "Dibuat": "Created at",
     "Isi laporan": "Contents of report",
-    "Lokasi": "Location"
+    "Lokasi": "Location",
+    "LAPORAN MASYARAKAT": "THE SOCIETY REPORT",
+    "Dari": "From"
 }
