--- a/lang/id.json
+++ b/lang/id.json
@@ -41,5 +41,6 @@
     "Too Many Requests": "Terlalu Banyak Request",
     "Server Error": "Kesalahan Teknis",
     "Sorry, you need to login": "Maaf, kamu perlu login",
-    "Images": "Foto"
+    "Images": "Foto",
+    "Society Reports": "Laporan Masyarakat"
 }
