update : add fitur delete dan edit sebagai admin

--- a/lang/en.json
+++ b/lang/en.json
@@ -18,5 +18,6 @@
     "Isi laporan": "Contents of report",
     "Lokasi": "Location",
     "LAPORAN MASYARAKAT": "THE SOCIETY REPORT",
-    "Dari": "From"
+    "Dari": "From",
+    "EDIT LAPORAN": "REPORT EDIT"
 }
